# AutoInputSwitch

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
cmake/: headerlist.cmake  sourcelist.cmake
data/: AutoInputSwitch.ini
src/: Extensions.cpp  Extensions.h  Hooks.cpp  Hooks.h  InputEventHandler.cpp  InputEventHandler.h  Offsets.h  PCH.h  Platform.h  Settings.cpp  Settings.h  ini.h  main.cpp
